Fix layout on mobile screens

--- a/www/css/style.less
+++ b/www/css/style.less
@@ -728,6 +728,11 @@ body {
   #editor_controls .submit {
     width: 100% !important;
   }
+  #editor_controls button {
+    display: block !important;
+    width: 100% !important;
+    margin: 0 0 10px 0 !important;
+  }
   #editor_controls .submit input  {
     width: 100% !important;
     float: none !important;
